...
                            android:layout_marginEnd="5dp"
                            android:layout_weight="3"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/cb_day1"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp"
                                android:background="@drawable/checkbox_selector"
                                android:button="@null"
...
                                android:textAlignment="center"
                                android:textColor="@color/white">

                            </CheckBox>

                            <CheckBox
                                android:id="@+id/cb_day3"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp"
                                android:background="@drawable/checkbox_selector"
                                android:button="@null"
...
                                android:textAlignment="center"
                                android:textColor="@color/white">

                            </CheckBox>

                            <CheckBox
                                android:id="@+id/cb_day4"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp"
                                android:background="@drawable/checkbox_selector"
                                android:button="@null"
...
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:text="save"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:background="@color/dark_cv"
...
